// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Encrypted > should match full metadata snapshot for entity with encrypted field 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "EncryptedWithCondition",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": {
        "condition": {
          "purpose": "pii",
        },
        "kryptos": null,
      },
      "enum": null,
      "hideOn": [],
      "key": "ssn",
      "max": null,
      "min": null,
      "mode": null,
      "name": "ssn",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "string",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`Encrypted > should stage a bare descriptor when no options are provided 1`] = `
{
  "condition": null,
  "kryptos": null,
}
`;

exports[`Encrypted > should stage a condition with multiple keys 1`] = `
{
  "condition": {
    "id": "key-id",
    "purpose": "pii",
  },
  "kryptos": null,
}
`;

exports[`Encrypted > should stage the condition 1`] = `
{
  "condition": {
    "purpose": "pii",
  },
  "kryptos": null,
}
`;
